infrastructures/OCI/k8s/wireguard/wireguard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      nodeSelector:
        workload: light
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:latest
          ports:
            - containerPort: 51820
              hostPort: 51820
              name: wireguard
              protocol: UDP
            - containerPort: 51821
              name: web-ui
              protocol: TCP
          volumeMounts:
            - name: wireguard-config
              mountPath: /etc/wireguard
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true
          readinessProbe:
            httpGet:
              path: /
              port: 51821
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 51821
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
      volumes:
        - name: wireguard-config
          persistentVolumeClaim:
            claimName: wireguard-config
