infrastructures/OCI/k8s/wireguard/wireguard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
  labels:
    app: wireguard
spec:
  type: ClusterIP
  selector:
    app: wireguard
  ports:
    - name: web-ui
      port: 51821
      targetPort: 51821
      protocol: TCP
