infrastructures/OCI/k8s/wireguard/wireguard-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wireguard-ui-https
  namespace: wireguard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vpn.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: wireguard
          port: 51821
      middlewares:
        - name: google-auth
          namespace: traefik
